phishing training scripts

--- a/feature-extraction/parquetbrowse.ipynb
+++ b/feature-extraction/parquetbrowse.ipynb
@@ -1558,7 +1558,7 @@
     "import pyarrow.parquet as pq\n",
     "import pandas as pd\n",
     "\n",
-    "data = pq.read_table('floor/benign_combined.parquet')\n",
+    "data = pq.read_table('umbrella_benign_FINISHED.parquet')\n",
     "\n",
     "df = data.to_pandas()\n",
     "pd.set_option('display.max_columns', 1000)\n",
@@ -1570,8 +1570,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "339b02e3",
+   "execution_count": null,
+   "id": "71ee2304",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cached data browser\n",
+    "\n",
+    "import pyarrow as pa\n",
+    "import pyarrow.parquet as pq\n",
+    "import pandas as pd\n",
+    "\n",
+    "data = pq.read_table('benign_2312.parquet')\n",
+    "\n",
+    "df = data.to_pandas()\n",
+    "pd.set_option('display.max_columns', 1000)\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "\n",
+    "df.head()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eab55490",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad44e202",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f5c5762",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e06163e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e40ed26",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6cd97a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "766a4e1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2846f8a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25ad0abb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b332a1a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9dd3af6a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9218d9a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcd2aa1a",
    "metadata": {},
    "outputs": [
     {
