Added new classifier training ntbs, mongo tools, etc.

--- a/dga/DGA-NN-train.ipynb
+++ b/dga/DGA-NN-train.ipynb
@@ -2830,13 +2830,7 @@
       "2572/2572 [==============================] - 7s 3ms/step - loss: 0.0443 - precision_2: 0.9841 - recall_2: 0.9840 - auc_2: 0.9985 - val_loss: 0.0439 - val_precision_2: 0.9850 - val_recall_2: 0.9848 - val_auc_2: 0.9988\n",
       "Epoch 107/150\n",
       "2572/2572 [==============================] - 7s 3ms/step - loss: 0.0443 - precision_2: 0.9841 - recall_2: 0.9841 - auc_2: 0.9985 - val_loss: 0.0474 - val_precision_2: 0.9884 - val_recall_2: 0.9806 - val_auc_2: 0.9988\n",
-      "Epoch 108/150\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 108/150\n",
       "2572/2572 [==============================] - 7s 3ms/step - loss: 0.0442 - precision_2: 0.9840 - recall_2: 0.9841 - auc_2: 0.9985 - val_loss: 0.0450 - val_precision_2: 0.9860 - val_recall_2: 0.9839 - val_auc_2: 0.9989\n",
       "Epoch 109/150\n",
       "2572/2572 [==============================] - 7s 3ms/step - loss: 0.0442 - precision_2: 0.9841 - recall_2: 0.9841 - auc_2: 0.9985 - val_loss: 0.0440 - val_precision_2: 0.9876 - val_recall_2: 0.9815 - val_auc_2: 0.9988\n",
@@ -3952,7 +3946,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
